# screen_capture_lite

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  Screen_Capture.sln  azure-pipelines.yml  build-unity-library.sh  cmake_uninstall.cmake.in  releasenotes.txt
Example/: CMakeLists.txt  Screen_Capture_Example.cpp
Example_CPP/: CMakeLists.txt  Screen_Capture_Example.cpp  lodepng.h
Example_CSharp/: CMakeLists.txt  Program.cs  screen_capture_lite_example_csharp.csproj  screen_capture_lite_example_csharp.sln
Example_OpenGL/: CMakeLists.txt  Screen_Capture_Example_OpenGL.cpp
Example_OpenGL/glfw/: CMakeLists.txt
Example_OpenGL/glfw/src/: win32_platform.h
Example_UP/Assets/Plugins/ScreenCaptureLite/: libscreen_capture_lite.dylib
Example_UP/Assets/Scenes/: SampleScene.unity
Example_UP/Assets/Scripts/: FpsCounter.cs  MousecursorCallbackData.cs  ScreenCaptureLight.cs  TestScreenCaptureLite.cs  WindowCallbackData.cs  WindowCallbackParams.cs
Example_UP/ProjectSettings/: ProjectSettings.asset
Example_Unity/: CMakeLists.txt
Example_Unity/Assets/Plugins/ScreenCaptureLite/: libscreen_capture_lite.dylib
Example_Unity/Assets/Scenes/: SampleScene.unity
Example_Unity/Assets/Scripts/: TestScreenCaptureLite.cs
Example_Unity/UnityProject/Assets/Plugins/: Screen_Capture_Lite.cs  libscreen_capture_lite_shared.dylib
Example_Unity/UnityProject/Assets/Scenes/: BasicSample.unity  ExtendedSample.unity
Example_Unity/UnityProject/Assets/Scripts/: BasicSample.cs  ExtendedSample.cs
Example_Unity/UnityProject/ProjectSettings/: ProjectSettings.asset
Screen_Capture/: ReadMe.txt  Screen.cpp  Screen.h  ScreenGrab_Win.cpp  ScreenInfo.cpp  ScreenInfo.h  Screen_Capture.sln  Screen_Capture.vcxitems  Screen_Capture.vcxproj  Screen_Capture.vcxproj.filters  Screen_Linux.cpp  Screen_Mac.cpp  Screen_Win.cpp  stdafx.cpp  stdafx.h
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters  stdafx.h
Test_Win/: Test_Win.cpp  Test_Win.vcxproj  Test_Win.vcxproj.filters  stdafx.cpp  stdafx.h
azure-devops/: build-windows.yml
include/: InterruptableSleeper.h  SCCommon.h  ScreenCapture.h  ScreenCaptureInterface.h  ScreenCaptureManager.h  ScreenCapture_C_API.h  ScreenTypes.h  ThreadManager.h  ThreadRunner.h
include/Internal/: SCCommon.h  ThreadManager.h
include/internal/: SCCommon.h  ThreadManager.h
include/ios/: CGFrameProcessor.h  CGMouseProcessor.h  NSFrameProcessor.h  NSFrameProcessorm.h  NSMouseCapture.h  NSMouseProcessor.h
include/linux/: X11FrameProcessor.h  X11MouseProcessor.h
include/windows/: CommonTypes.h  DXCommon.h  DXDuplicationManager.h  DXFrameProcessor.h  DXThread.h  DXThreadManager.h  GDIFrameProcessor.h  GDIHelpers.h  GDIMouseProcessor.h  GDIThread.h  GDIWindowProcessor.h  ScreenCaptureDX.h  ScreenCaptureWindows.h
lib/: CMakeLists.txt
modules/: screen_capture_liteConfig.cmake.in  screen_capture_lite_sharedConfig.cmake.in  screen_capture_lite_staticConfig.cmake.in
src/: CMakeLists.txt  SCCommon.cpp  Screen.cpp  ScreenCapture.cpp  ScreenCaptureManager.cpp  ThreadManager.cpp
src/Internal/: SCCommon.cpp  ThreadManager.cpp
src/ios/: CGFrameProcessor.cpp  CGMouseProcessor.cpp  GetMonitors.cpp  GetWindows.cpp  NSFrameProcessor.cpp  NSFrameProcessor.mm  NSMouseCapture.m  NSMouseProcessor.cpp  ThreadRunner.cpp
src/linux/: GetMonitors.cpp  GetWindows.cpp  ThreadRunner.cpp  X11FrameProcessor.cpp  X11MouseProcessor.cpp
src/windows/: CommonTypes.cpp  DXCommon.cpp  DXDuplicationManager.cpp  DXFrameProcessor.cpp  DXThread.cpp  DXThreadManager.cpp  GDIFrameProcessor.cpp  GDIMouseProcessor.cpp  GDIThread.cpp  GDIWindowProcessor.cpp  GetMonitors.cpp  GetWindows.cpp  PixelShader.h  ScreenCaptureDX.cpp  ScreenCaptureGDI.cpp  ScreenCaptureWindows.cpp  ThreadRunner.cpp  VertexShader.h
src_cpp/: CMakeLists.txt  SCCommon.cpp  ScreenCapture.c  ScreenCapture.cpp  ThreadManager.cpp
src_cpp/ios/: CGFrameProcessor.cpp  GetWindows.cpp  NSFrameProcessor.cpp  NSFrameProcessor.mm  NSMouseProcessor.cpp
src_cpp/linux/: ThreadRunner.cpp  X11FrameProcessor.cpp  X11MouseProcessor.cpp
src_cpp/windows/: DXFrameProcessor.cpp  GDIFrameProcessor.cpp  GDIMouseProcessor.cpp  GetWindows.cpp  ThreadRunner.cpp
src_csharp/: CMakeLists.txt  MonitorCaptureConfiguration.cs  NativeFunctions.cs  NativeTypes.cs  ScreenCaptureManager.cs  Screen_Capture_Lite.cs  UnmanagedUtility.cs  WindowCaptureConfiguration.cs  screen_capture_lite_csharp.csproj
